--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           Sometimes the most productive thing you can do is relax and have a cup
           of coffee in the Van'Cafe
         </p>
-        <a href="#" class="cta">Beli Sekarang</a>
+        <a href="#" class="cta">Order now</a>
       </main>
     </section>
     <!-- Hero section end -->
@@ -55,7 +55,7 @@
     <!-- about section start-->
 
     <section id="about" class="about">
-      <h2><span>Tentang </span>Kami</h2>
+      <h2><span>Tentang </span> Kami</h2>
 
       <div class="row">
         <div class="about-img">
@@ -64,10 +64,11 @@
         <div class="content">
           <h3>Van'cafe</h3>
           <p>
-            Cafe yang terletak di tengah kota Bogor, dengan nuansa interior
-            castle, vintage, dan buku, yang di dominasi pembeli seorang pelajar
-            dan pekerja , cocok untuk mengerjakan tugas dan bersantai, didirikan
-            pada tahun 2023, beroprasi pada jam 08.00-21.00.
+            Cafe kekinian yang terletak di tengah kota Bogor dengan nuansa
+            interior vintage, castle, juga homey. Tersedia berbagai macam buku
+            sehingga cocok bagi para pelajar dan pekerja menghabiskan waktunya
+            untuk mengerjakan tugas maupun bersantai. | Jam operasional:
+            08.00-21.00 WIB
           </p>
         </div>
       </div>
@@ -78,8 +79,8 @@
     <!-- Menu section start -->
 
     <section id="menu" class="menu">
-      <h2><span>Menu</span>Kami</h2>
-      <p>Lima best menu di Van'cafe</p>
+      <h2><span>Menu</span> Kami</h2>
+      <p>Menu best seller di Van'cafe</p>
 
       <div class="row">
         <div class="menu-card">
@@ -115,10 +116,10 @@
     <!-- Contact Section start -->
 
     <section id="contact" class="contact">
-      <h2><span>Kontak</span>Kami</h2>
+      <h2><span>Kontak</span> Kami</h2>
       <p>
-        Tertarik?, anda bisa pesan di bawah ini, serta Van'Cafe sudah tersedia
-        di platfrom media sosial dan go food.
+        Tertarik? Langsung pesan sekarang! Saat ini kami tersedia di Instagram
+        dan Go Food.
       </p>
 
       <div class="row">
