--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Van'Cafe</title>
+    	
+    <link rel="shortcut icon" href="img/kopi.svg" >
+
 
     <!-- feather icon -->
     <script src="https://unpkg.com/feather-icons"></script>
@@ -17,24 +20,89 @@
       rel="stylesheet" />
 
     <link rel="stylesheet" href="style.css" />
+
+    <!-- Alpine Js -->
+    <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
+
+    <!-- App -->
+    <script src="src/app.js" async></script>
   </head>
   <body>
     <!-- Navbar start -->
-    <nav class="navbar">
+    <nav class="navbar" x-data>
       <a href="#" class="navbar-logo">Van'<span>Cafe</span></a>
 
       <div class="navbar-nav">
         <a href="#home">Home</a>
         <a href="#about">Tentang kami</a>
         <a href="#menu">Menu</a>
+        <a href="#products">Produk</a>
         <a href="#contact">Kontak</a>
       </div>
 
       <div class="navbar-extra">
-        <a href="#" id="search"><i data-feather="search"></i></a>
-        <a href="#" id="shopping-cart"><i data-feather="shopping-cart"></i></a>
+        <a href="#" id="search-button"><i data-feather="search"></i></a>
+        <a href="#" id="shopping-cart-button">
+          <i data-feather="shopping-cart"></i>
+          <span class="quantity-badge" x-show="$store.cart.quantity"  x-text="$store.cart.quantity"></span>
+        </a>
         <a href="#" id="cookies-menu"><i data-feather="menu"></i></a>
       </div>
+
+      <!-- Search form star -->
+      <div class="search-form">
+        <input type="search" id="search-box" placeholder="search here...">
+        <label for="search-box"><i data-feather="search"></i></label>
+      </div>
+      <!-- Search form end -->
+
+      <!-- Shopping cart start -->
+      <div class="shopping-cart">
+        <template x-for="(item, index) in $store.cart.items" x-keys="index">
+          <div class="cart-item">
+            <img :src="`img/products/${item.img}`" :alt="item.name">
+            <div class="item-detail">
+              <h3 x-text="item.name"></h3>
+              <div class="item-price">
+                <span x-text="rupiah(item.price)"></span> &times;
+                <button id="remove" @click="$store.cart.remove(item.id)">&minus;</button>
+                <span x-text="item.quantity"></span>
+                <button id="add" @click="$store.cart.add(item)">&plus;</button>&equals;
+                <span x-text="rupiah(item.total)"></span>
+              </div>
+            </div>
+          </div>
+        </template>
+        <h4 x-show="!$store.cart.items.length" style="margin-top: 1rem;">Cart is Empty</h4>
+        <h4 x-show="$store.cart.items.length">Total : <span x-text="rupiah($store.cart.total)"></span></h4>
+
+
+        <div class="form-container" x-show="$store.cart.items.length">
+          <form action="" id="checkoutForm">
+            <input type="hidden" name="items" x-model="JSON.stringify($store.cart.items)">
+            <input type="hidden" name="total" x-model="$store.cart.total">
+            <h5>Customer Detail</h5>
+            <label for="name">
+             <span>Name</span>
+             <input type="text" name="name" id="name">
+            </label>
+
+            <label for="email">
+             <span>Email</span>
+             <input type="email" name="email" id="email">
+            </label>
+
+            <label for="phone">
+             <span>Phone</span>
+             <input type="number" name="phone" id="phone" autocomplete="off">
+            </label>
+
+            <button class="checkout-button disabled" type="submit" id="checkout-button" value="checkout">Checkout</button>
+
+          </form>
+        </div>
+      </div>
+      <!-- Shopping cart end -->
     </nav>
 
     <!-- Navbar end -->
@@ -47,7 +115,6 @@
           Sometimes the most productive thing you can do is relax and have a cup
           of coffee in the Van'Cafe
         </p>
-        <a href="#" class="cta">Order now</a>
       </main>
     </section>
     <!-- Hero section end -->
@@ -75,6 +142,8 @@
     </section>
 
     <!-- about section end-->
+
+   
 
     <!-- Menu section start -->
 
@@ -112,6 +181,113 @@
     </section>
 
     <!-- Menu section end -->
+
+     <!-- Products Section start -->
+    <section class="products" id="products" x-data="products">
+      <h2><span>Produk Unggulan</span> Kami</h2>
+      <p>Beberapa Minuman TerBestSeller Pada Van Cafe yang Wajib DiBeli</p>
+
+      <div class="row">
+        <template x-for="(item, index) in items" x-key="index">
+          <div class="product-card">
+            <div class="product-icons">
+              <a href="#" @click.prevent="$store.cart.add(item)">
+                  <svg
+                    width="24"
+                    height="24"
+                    fill="none"
+                    stroke="currentColor"
+                    stroke-width="2"
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                  >
+                    <use href="img/feather-sprite.svg#shopping-cart" />
+                  </svg>
+              </a>
+              <a href="" class="item-detail-button">
+                  <svg
+                    width="24"
+                    height="24"
+                    fill="none"
+                    stroke="currentColor"
+                    stroke-width="2"
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                  >
+                    <use href="img/feather-sprite.svg#eye" />
+                  </svg>
+              </a>
+            </div>
+            <div class="product-image">
+              <img :src="`img/products/${item.img}`" :alt="item.name" style="max-width: 300px; max-height: 300px; margin-top: 10px;">
+            </div>
+            <div class="product-content">
+              <h3 x-text="item.name"></h3>
+              <div class="product-stars">
+                 <svg
+                    width="24"
+                    height="24"
+                    fill="currentColor"
+                    stroke="currentColor"
+                    stroke-width="2"
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                  >
+                    <use href="img/feather-sprite.svg#star" />
+                  </svg>
+                 <svg
+                    width="24"
+                    height="24"
+                    fill="currentColor"
+                    stroke="currentColor"
+                    stroke-width="2"
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                  >
+                    <use href="img/feather-sprite.svg#star" />
+                  </svg>
+                 <svg
+                    width="24"
+                    height="24"
+                    fill="currentColor"
+                    stroke="currentColor"
+                    stroke-width="2"
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                  >
+                    <use href="img/feather-sprite.svg#star" />
+                  </svg>
+                 <svg
+                    width="24"
+                    height="24"
+                    fill="currentColor"
+                    stroke="currentColor"
+                    stroke-width="2"
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                  >
+                    <use href="img/feather-sprite.svg#star" />
+                  </svg>
+                 <svg
+                    width="24"
+                    height="24"
+                    fill="currentColor"
+                    stroke="currentColor"
+                    stroke-width="2"
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                  >
+                    <use href="img/feather-sprite.svg#star" />
+                  </svg>
+                 
+              </div>
+              <div class="product-price"><span x-text="rupiah(item.price)"></span></div>
+            </div>
+          </div>
+        </template>
+      </div>
+    </section>
+    <!-- Products Section end -->
 
     <!-- Contact Section start -->
 
@@ -152,7 +328,7 @@
 
     <footer>
       <div class="socials">
-        <a href="https://www.instagram.com/arturrr.cs/" target="_blank">
+        <a href="https://www.instagram.com/arturrrama/" target="_blank">
           <i data-feather="instagram"></i>
         </a>
         <a href="#">
@@ -175,6 +351,30 @@
     </footer>
     <!-- footer end -->
 
+    <!-- Modal box item detail start -->
+    <div class="modal" id="item-detail-modal">
+      <div class="modal-container">
+        <a href="#" class="close-icon"><i data-feather="x"></i></a>
+        <div class="modal-content">
+          <img src="img/products/packagecfe.jpg" alt="Product 1">
+          <div class="product-content">
+            <h3>Americano</h3>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Perferendis explicabo nemo nesciunt nam ipsum ad assumenda necessitatibus obcaecati repellendus minus, commodi natus dignissimos cupiditate eius!</p>
+             <div class="product-stars">
+              <i data-feather="star" class="star-full"></i>
+              <i data-feather="star" class="star-full"></i>
+              <i data-feather="star" class="star-full"></i>
+              <i data-feather="star" class="star-full"></i>
+              <i data-feather="star"></i>
+            </div>
+            <div class="product-price">IDR 30k <span>IDR 55K</span></div>
+            <a href="#"><i data-feather="shopping-cart"></i><span>add to cart</span></a>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- Modal box item detail end -->
+
     <!-- Feather icon -->
     <script>
       feather.replace();
@@ -183,4 +383,5 @@
     <!-- My Javascript -->
     <script src="script.js"></script>
   </body>
+
 </html>
